# cstuff

./: .clangd  .gitignore  2d_arrays.cpp  ALGO-array-find-n-if.cpp  ETC-wonky-range-for-iterators.cpp  HOF-Catch2demo.cpp  HOF-chrono.cpp  HOF-cout-format.cpp  HOF-enum-union.cpp  HOF-error.cpp  HOF-function_pointers.cpp  HOF-functors-lambdas.cpp  HOF-inheritance.cpp  HOF-random.cpp  HOF-structured_binding.cpp  HOF-traits.cpp  HOF-type_introspection.cpp  HOF-vector-emplace_back.cpp  HOOK-wonky-range-for-iterators.cpp  LearnCPPch20-ex-calculator.cpp  LearnCPPch22-smart-pointers.cpp  Makefile  RE  REPORT_vim_args.txt  Session.vim  TCPPPL-28.5-metaprogramming-tuple.cpp  a.out  algo-array.cpp  algo-iota.cpp  allocator-simple.cpp  array.cpp  asdf.cpp  asdf.txt  b.out  bar.cpp  bash-special-params.sh  bitset_test.cpp  c++20_test.cpp  ch14ex15_vector_iterator.cpp  ch8_vector_reverse.cpp  (+112 more)
2023PPP/: .clangd  GUI.h  Graph.cpp  Graph.h  LearnCPPch24-inheritance-quiz.cpp  Session.vim  Window.cpp  Window.h  __compile_commands.json  __compile_flags.txt  asdf.cpp  asdf.h  ch6-calc-1.cc  ch6-calc-2.cc  cleanup.cpp  cleanup.h  common.h  compile_commands.json  data  dirscript.rb  draw.cpp  fonts.h  foo.cpp  foo_makefile  imgui.ini  init_imgui.cpp  init_imgui.h  init_imgui_style.h  init_window.cpp  iostreams.cpp  main.cpp  make_randoms.rb  rakefile  randoms  sdl_rakefile.rb  setup_imgui.cpp  setup_imgui.h  setup_imgui_style.cpp  setup_imgui_style.h  (+6 more)
lib_examples/: CMakeLists.txt  Demo-Catch2.cpp  fmt_example.cpp  foo.cpp  my_spdlog_example.cc  object_pool_test.cpp  spdlog_example.cpp
(+286 files in other folders)
